add spinner new market and daswhboard

--- a/Epic_Trading/src/app/components/dashboard/dashboard.component.html
+++ b/Epic_Trading/src/app/components/dashboard/dashboard.component.html
@@ -317,15 +317,39 @@
 
 
 
+<!-- SPINNER  -->
 
-
+<div *ngIf="showSpinner">
+<div class="loaderS mx-auto " style="margin-top: 300px;">
+  <div class="box box-1">
+    <div class="side-left"></div>
+    <div class="side-right"></div>
+    <div class="side-top"></div>
+  </div>
+  <div class="box box-2">
+    <div class="side-left"></div>
+    <div class="side-right"></div>
+    <div class="side-top"></div>
+  </div>
+  <div class="box box-3">
+    <div class="side-left"></div>
+    <div class="side-right"></div>
+    <div class="side-top"></div>
+  </div>
+  <div class="box box-4">
+    <div class="side-left"></div>
+    <div class="side-right"></div>
+    <div class="side-top"></div>
+  </div>
+</div>
+</div>
 
 
 <!-- TEST DASHBOARD TEMPLATE LIKE MARKET ANALYST -->
 
 
 
-<body id="page-top">
+<body id="page-top" *ngIf="!showSpinner">
 
   <!-- Page Wrapper -->
   <div id="wrapper">
