--- a/Epic_Trading/src/app/components/market/market.component.html
+++ b/Epic_Trading/src/app/components/market/market.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="showSpinner">
 
 
-  <div id="load">
+  <!-- <div id="load">
 
     <div>D</div>
     <div>A</div>
@@ -13,9 +13,30 @@
    <div>O</div>
    <div>T</div>
    <div>S</div>
+  </div> -->
+
+  <div class="loaderS mx-auto " style="margin-top: 300px;">
+    <div class="box box-1">
+      <div class="side-left"></div>
+      <div class="side-right"></div>
+      <div class="side-top"></div>
+    </div>
+    <div class="box box-2">
+      <div class="side-left"></div>
+      <div class="side-right"></div>
+      <div class="side-top"></div>
+    </div>
+    <div class="box box-3">
+      <div class="side-left"></div>
+      <div class="side-right"></div>
+      <div class="side-top"></div>
+    </div>
+    <div class="box box-4">
+      <div class="side-left"></div>
+      <div class="side-right"></div>
+      <div class="side-top"></div>
+    </div>
   </div>
-
-
 </div>
 
 <div *ngIf="!showSpinner">
