--- a/Epic_Trading/src/app/components/market/market.component.scss
+++ b/Epic_Trading/src/app/components/market/market.component.scss
@@ -1,235 +1,389 @@
-#load {
-  position: absolute;
-  width: 600px;
-  height: 36px;
-  left: 50%;
-  top: 40%;
-  margin-left: -300px;
-  overflow: visible;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  cursor: default;
+// #load {
+//   position: absolute;
+//   width: 600px;
+//   height: 36px;
+//   left: 50%;
+//   top: 40%;
+//   margin-left: -300px;
+//   overflow: visible;
+//   -webkit-user-select: none;
+//   -moz-user-select: none;
+//   -ms-user-select: none;
+//   user-select: none;
+//   cursor: default;
+// }
+
+// #load div {
+//   position: absolute;
+//   width: 100px;
+//   height: 66px;
+//   opacity: 0;
+//   font-family: Helvetica, Arial, sans-serif;
+//   animation: move 2.5s linear infinite;
+//   -o-animation: move 2.5s linear infinite;
+//   -moz-animation: move 2.5s linear infinite;
+//   -webkit-animation: move 2.5s linear infinite;
+//   transform: rotate(180deg);
+//   -o-transform: rotate(180deg);
+//   -moz-transform: rotate(180deg);
+//   -webkit-transform: rotate(180deg);
+//   background: linear-gradient(60deg, rgba(84, 58, 183, 1) 0%, rgba(0, 172, 193, 1) 100%);
+//   -webkit-background-clip: text;
+//   background-clip: text;
+//   color: transparent;
+//   font-size: 2em;
+// }
+
+// #load div:nth-child(2) {
+//   animation-delay: 0.2s;
+//   -o-animation-delay: 0.2s;
+//   -moz-animation-delay: 0.2s;
+//   -webkit-animation-delay: 0.2s;
+// }
+
+// #load div:nth-child(3) {
+//   animation-delay: 0.4s;
+//   -o-animation-delay: 0.4s;
+//   -webkit-animation-delay: 0.4s;
+//   -webkit-animation-delay: 0.4s;
+// }
+
+// #load div:nth-child(4) {
+//   animation-delay: 0.6s;
+//   -o-animation-delay: 0.6s;
+//   -moz-animation-delay: 0.6s;
+//   -webkit-animation-delay: 0.6s;
+// }
+
+// #load div:nth-child(5) {
+//   animation-delay: 0.8s;
+//   -o-animation-delay: 0.8s;
+//   -moz-animation-delay: 0.8s;
+//   -webkit-animation-delay: 0.8s;
+// }
+
+// #load div:nth-child(6) {
+//   animation-delay: 1s;
+//   -o-animation-delay: 1s;
+//   -moz-animation-delay: 1s;
+//   -webkit-animation-delay: 1s;
+// }
+
+// #load div:nth-child(7) {
+//   animation-delay: 1.2s;
+//   -o-animation-delay: 1.2s;
+//   -moz-animation-delay: 1.2s;
+//   -webkit-animation-delay: 1.2s;
+// }
+// #load div:nth-child(8) {
+//   animation-delay: 1.4s;
+//   -o-animation-delay: 1.4;
+//   -moz-animation-delay: 1.4;
+//   -webkit-animation-delay: 1.4;
+// }
+
+// #load div:nth-child(9) {
+//   animation-delay: 1.6s;
+//   -o-animation-delay: 1.6s;
+//   -moz-animation-delay: 1.6s;
+//   -webkit-animation-delay: 1.6s;
+// }
+// #load div:nth-child(10) {
+//   animation-delay: 1.8s;
+//   -o-animation-delay: 1.8s;
+//   -moz-animation-delay: 1.8s;
+//   -webkit-animation-delay: 1.8s;
+// }
+// #load div:nth-child(11) {
+//   animation-delay: 2s;
+//   -o-animation-delay: 2s;
+//   -moz-animation-delay: 2s;
+//   -webkit-animation-delay: 2s;
+// }
+// #load div:nth-child(12) {
+//   animation-delay: 2.2;
+//   -o-animation-delay: 2.2s;
+//   -moz-animation-delay: 2.2s;
+//   -webkit-animation-delay: 2.2s;
+// }
+// #load div:nth-child(13) {
+//   animation-delay: 2.4s;
+//   -o-animation-delay: 2.4s;
+//   -moz-animation-delay: 2.4s;
+//   -webkit-animation-delay: 2.4s;
+// }
+
+// @keyframes move {
+//   0% {
+//     left: 0;
+//     opacity: 0;
+//   }
+
+//   35% {
+//     left: 41%;
+//     -moz-transform: rotate(0deg);
+//     -webkit-transform: rotate(0deg);
+//     -o-transform: rotate(0deg);
+//     transform: rotate(0deg);
+//     opacity: 1;
+//   }
+
+//   65% {
+//     left: 59%;
+//     -moz-transform: rotate(0deg);
+//     -webkit-transform: rotate(0deg);
+//     -o-transform: rotate(0deg);
+//     transform: rotate(0deg);
+//     opacity: 1;
+//   }
+
+//   100% {
+//     left: 100%;
+//     -moz-transform: rotate(-180deg);
+//     -webkit-transform: rotate(-180deg);
+//     -o-transform: rotate(-180deg);
+//     transform: rotate(-180deg);
+//     opacity: 0;
+//   }
+// }
+
+// @-moz-keyframes move {
+//   0% {
+//     left: 0;
+//     opacity: 0;
+//   }
+
+//   35% {
+//     left: 41%;
+//     -moz-transform: rotate(0deg);
+//     transform: rotate(0deg);
+//     opacity: 1;
+//   }
+
+//   65% {
+//     left: 59%;
+//     -moz-transform: rotate(0deg);
+//     transform: rotate(0deg);
+//     opacity: 1;
+//   }
+
+//   100% {
+//     left: 100%;
+//     -moz-transform: rotate(-180deg);
+//     transform: rotate(-180deg);
+//     opacity: 0;
+//   }
+// }
+
+// @-webkit-keyframes move {
+//   0% {
+//     left: 0;
+//     opacity: 0;
+//   }
+
+//   35% {
+//     left: 41%;
+//     -webkit-transform: rotate(0deg);
+//     transform: rotate(0deg);
+//     opacity: 1;
+//   }
+
+//   65% {
+//     left: 59%;
+//     -webkit-transform: rotate(0deg);
+//     transform: rotate(0deg);
+//     opacity: 1;
+//   }
+
+//   100% {
+//     left: 100%;
+//     -webkit-transform: rotate(-180deg);
+//     transform: rotate(-180deg);
+//     opacity: 0;
+//   }
+// }
+
+// @-o-keyframes move {
+//   0% {
+//     left: 0;
+//     opacity: 0;
+//   }
+
+//   35% {
+//     left: 41%;
+//     -o-transform: rotate(0deg);
+//     transform: rotate(0deg);
+//     opacity: 1;
+//   }
+
+//   65% {
+//     left: 59%;
+//     -o-transform: rotate(0deg);
+//     transform: rotate(0deg);
+//     opacity: 1;
+//   }
+
+//   100% {
+//     left: 100%;
+//     -o-transform: rotate(-180deg);
+//     transform: rotate(-180deg);
+//     opacity: 0;
+//   }
+// }
+
+
+
+
+
+
+
+
+// SPINNER
+/* 3D tower loader made by: csozi | Website: www.csozi.hu*/
+
+.loaderS {
+  scale: 3;
+  height: 50px;
+  width: 40px;
 }
 
-#load div {
-  position: absolute;
-  width: 100px;
-  height: 66px;
+.box {
+  position: relative;
   opacity: 0;
-  font-family: Helvetica, Arial, sans-serif;
-  animation: move 2.5s linear infinite;
-  -o-animation: move 2.5s linear infinite;
-  -moz-animation: move 2.5s linear infinite;
-  -webkit-animation: move 2.5s linear infinite;
-  transform: rotate(180deg);
-  -o-transform: rotate(180deg);
-  -moz-transform: rotate(180deg);
-  -webkit-transform: rotate(180deg);
-  background: linear-gradient(60deg, rgba(84, 58, 183, 1) 0%, rgba(0, 172, 193, 1) 100%);
-  -webkit-background-clip: text;
-  background-clip: text;
-  color: transparent;
-  font-size: 2em;
+  left: 10px;
 }
 
-#load div:nth-child(2) {
-  animation-delay: 0.2s;
-  -o-animation-delay: 0.2s;
-  -moz-animation-delay: 0.2s;
-  -webkit-animation-delay: 0.2s;
+.side-left {
+  position: absolute;
+  background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%)!important;
+  color:white!important;
+  width: 19px;
+  height: 5px;
+  transform: skew(0deg, -25deg);
+  top: 14px;
+  left: 10px;
 }
 
-#load div:nth-child(3) {
-  animation-delay: 0.4s;
-  -o-animation-delay: 0.4s;
-  -webkit-animation-delay: 0.4s;
-  -webkit-animation-delay: 0.4s;
+.side-right {
+  position: absolute;
+  background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%)!important;
+  color:white!important;
+  width: 19px;
+  height: 5px;
+  transform: skew(0deg, 25deg);
+  top: 14px;
+  left: -9px;
 }
 
-#load div:nth-child(4) {
-  animation-delay: 0.6s;
-  -o-animation-delay: 0.6s;
-  -moz-animation-delay: 0.6s;
-  -webkit-animation-delay: 0.6s;
+.side-top {
+  position: absolute;
+  background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%)!important;
+  color:white!important;
+  width: 20px;
+  height: 20px;
+  rotate: 45deg;
+  transform: skew(-20deg, -20deg);
 }
 
-#load div:nth-child(5) {
-  animation-delay: 0.8s;
-  -o-animation-delay: 0.8s;
-  -moz-animation-delay: 0.8s;
-  -webkit-animation-delay: 0.8s;
+.box-1 {
+  animation: from-left 4s infinite;
 }
 
-#load div:nth-child(6) {
+.box-2 {
+  animation: from-right 4s infinite;
   animation-delay: 1s;
-  -o-animation-delay: 1s;
-  -moz-animation-delay: 1s;
-  -webkit-animation-delay: 1s;
 }
 
-#load div:nth-child(7) {
-  animation-delay: 1.2s;
-  -o-animation-delay: 1.2s;
-  -moz-animation-delay: 1.2s;
-  -webkit-animation-delay: 1.2s;
-}
-#load div:nth-child(8) {
-  animation-delay: 1.4s;
-  -o-animation-delay: 1.4;
-  -moz-animation-delay: 1.4;
-  -webkit-animation-delay: 1.4;
-}
-
-#load div:nth-child(9) {
-  animation-delay: 1.6s;
-  -o-animation-delay: 1.6s;
-  -moz-animation-delay: 1.6s;
-  -webkit-animation-delay: 1.6s;
-}
-#load div:nth-child(10) {
-  animation-delay: 1.8s;
-  -o-animation-delay: 1.8s;
-  -moz-animation-delay: 1.8s;
-  -webkit-animation-delay: 1.8s;
-}
-#load div:nth-child(11) {
+.box-3 {
+  animation: from-left 4s infinite;
   animation-delay: 2s;
-  -o-animation-delay: 2s;
-  -moz-animation-delay: 2s;
-  -webkit-animation-delay: 2s;
-}
-#load div:nth-child(12) {
-  animation-delay: 2.2;
-  -o-animation-delay: 2.2s;
-  -moz-animation-delay: 2.2s;
-  -webkit-animation-delay: 2.2s;
-}
-#load div:nth-child(13) {
-  animation-delay: 2.4s;
-  -o-animation-delay: 2.4s;
-  -moz-animation-delay: 2.4s;
-  -webkit-animation-delay: 2.4s;
 }
 
-@keyframes move {
+.box-4 {
+  animation: from-right 4s infinite;
+  animation-delay: 3s;
+}
+
+@keyframes from-left {
   0% {
-    left: 0;
+    z-index: 20;
     opacity: 0;
+    translate: -20px -6px;
   }
 
-  35% {
-    left: 41%;
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
+  20% {
+    z-index: 10;
     opacity: 1;
+    translate: 0px 0px;
   }
 
-  65% {
-    left: 59%;
-    -moz-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
+  40% {
+    z-index: 9;
+    translate: 0px 4px;
+  }
+
+  60% {
+    z-index: 8;
+    translate: 0px 8px;
+  }
+
+  80% {
+    z-index: 7;
     opacity: 1;
+    translate: 0px 12px;
   }
 
   100% {
-    left: 100%;
-    -moz-transform: rotate(-180deg);
-    -webkit-transform: rotate(-180deg);
-    -o-transform: rotate(-180deg);
-    transform: rotate(-180deg);
+    z-index: 5;
+    translate: 0px 30px;
     opacity: 0;
   }
 }
 
-@-moz-keyframes move {
+@keyframes from-right {
   0% {
-    left: 0;
+    z-index: 20;
     opacity: 0;
+    translate: 20px -6px;
   }
 
-  35% {
-    left: 41%;
-    -moz-transform: rotate(0deg);
-    transform: rotate(0deg);
+  20% {
+    z-index: 10;
     opacity: 1;
+    translate: 0px 0px;
   }
 
-  65% {
-    left: 59%;
-    -moz-transform: rotate(0deg);
-    transform: rotate(0deg);
+  40% {
+    z-index: 9;
+    translate: 0px 4px;
+  }
+
+  60% {
+    z-index: 8;
+    translate: 0px 8px;
+  }
+
+  80% {
+    z-index: 7;
     opacity: 1;
+    translate: 0px 12px;
   }
 
   100% {
-    left: 100%;
-    -moz-transform: rotate(-180deg);
-    transform: rotate(-180deg);
+    z-index: 5;
+    translate: 0px 30px;
     opacity: 0;
   }
 }
 
-@-webkit-keyframes move {
-  0% {
-    left: 0;
-    opacity: 0;
-  }
 
-  35% {
-    left: 41%;
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-    opacity: 1;
-  }
 
-  65% {
-    left: 59%;
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-    opacity: 1;
-  }
 
-  100% {
-    left: 100%;
-    -webkit-transform: rotate(-180deg);
-    transform: rotate(-180deg);
-    opacity: 0;
-  }
-}
 
-@-o-keyframes move {
-  0% {
-    left: 0;
-    opacity: 0;
-  }
 
-  35% {
-    left: 41%;
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    opacity: 1;
-  }
 
-  65% {
-    left: 59%;
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    opacity: 1;
-  }
 
-  100% {
-    left: 100%;
-    -o-transform: rotate(-180deg);
-    transform: rotate(-180deg);
-    opacity: 0;
-  }
-}
+
 
 
 
