--- a/Epic_Trading/src/app/components/market-analyst/market-analyst.component.html
+++ b/Epic_Trading/src/app/components/market-analyst/market-analyst.component.html
@@ -314,7 +314,7 @@
                                             </tr>
                                           </ng-container>
                                           <button class="btn" (click)="showAllHistoricalPrices = !showAllHistoricalPrices">
-                                            {{ showAllHistoricalPrices ? 'Mostra meno' : 'Mostra tutti' }}
+                                            {{ showAllHistoricalPrices ? 'Show less' : 'Show more' }}
                                           </button>
 
                                         </tbody>
@@ -465,7 +465,7 @@
                                 <div class="card-body">
                                     <div class="text-center">
                                         <img class="img-fluid px-3 px-sm-4 mt-3 mb-4" style="width: 25rem;"
-                                            src="img/undraw_posting_photo.svg" alt="...">
+                                            src="" alt="...">
                                     </div>
                                     <p>Add some quality, svg illustrations to your project courtesy of <a
                                             target="_blank" rel="nofollow" href="https://undraw.co/">unDraw</a>, a
