--- a/Epic_Trading/src/app/components/navbar/navbar.component.html
+++ b/Epic_Trading/src/app/components/navbar/navbar.component.html
@@ -49,11 +49,11 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person mx-2" viewBox="0 0 16 16">
             <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
           </svg>Profile</a></li>
-          <li><a class="dropdown-item d-flex align-items-center" [routerLink]="['/dashboard']">
+          <li><a class="dropdown-item d-flex align-items-center" [routerLink]="['/market']">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-star mx-2" viewBox="0 0 16 16">
             <path d="M2.866 14.85c-.078.444.36.791.746.593l4.39-2.256 4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73 3.522-3.356c.33-.314.16-.888-.282-.95l-4.898-.696L8.465.792a.513.513 0 0 0-.927 0L5.354 5.12l-4.898.696c-.441.062-.612.636-.283.95l3.523 3.356-.83 4.73zm4.905-2.767-3.686 1.894.694-3.957a.565.565 0 0 0-.163-.505L1.71 6.745l4.052-.576a.525.525 0 0 0 .393-.288L8 2.223l1.847 3.658a.525.525 0 0 0 .393.288l4.052.575-2.906 2.77a.565.565 0 0 0-.163.506l.694 3.957-3.686-1.894a.503.503 0 0 0-.461 0z"/>
-          </svg>Wallet</a></li>
-          <li><a  (click)="openSettingsModal()" class="dropdown-item d-flex align-items-center"  [routerLink]="['/dashboard']">
+          </svg>Market</a></li>
+          <li><a  (click)="openSettingsModal()" class="dropdown-item d-flex align-items-center"  >
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear mx-2" viewBox="0 0 16 16">
             <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"/>
             <path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z"/>
@@ -92,7 +92,7 @@
         </h5>
 
       </div>
-      <div class="modal-body">
+      <div class="modal-body"  *ngIf="currentUserInfo">
         <p id="add-modal " class="bannercontrolpaneltext">Successful user modify</p>
         <div class="col-md-12">
           <form (submit)="updateUser(currentUserInfo.id)" class="d-flex">
@@ -102,19 +102,19 @@
             </div>
             <div class="form-group">
               <label for="surname">Cognome</label>
-              <input type="text" class="form-control" id="surname" name="surname" [(ngModel)]="currentUserInfo.surname" (ngModelChange)="onFieldChange()">
+              <input type="text" class="form-control" id="surname" name="surname"  *ngIf="currentUserInfo"[(ngModel)]="currentUserInfo.surname" (ngModelChange)="onFieldChange()">
             </div>
             <div class="form-group">
               <label for="username">Username</label>
-              <input type="text" class="form-control" id="username" name="username" [(ngModel)]="currentUserInfo.username" (ngModelChange)="onFieldChange()">
+              <input type="text" class="form-control" id="username" name="username" *ngIf="currentUserInfo" [(ngModel)]="currentUserInfo.username" (ngModelChange)="onFieldChange()">
             </div>
             <div class="form-group">
               <label for="email">Email</label>
-              <input type="email" class="form-control border-0 bg-white" id="email" name="email" [(ngModel)]="currentUserInfo.email" (ngModelChange)="onFieldChange()">
+              <input type="email" class="form-control border-0 bg-white" id="email" name="email" *ngIf="currentUserInfo" [(ngModel)]="currentUserInfo.email" (ngModelChange)="onFieldChange()">
             </div>
             <div class="form-group">
               <label for="phoneNumber">Numero di Telefono</label>
-              <input type="tel" class="form-control" id="phoneNumber" name="phoneNumber" [(ngModel)]="currentUserInfo.phoneNumber" (ngModelChange)="onFieldChange()">
+              <input type="tel" class="form-control" id="phoneNumber" name="phoneNumber" *ngIf="currentUserInfo" [(ngModel)]="currentUserInfo.phoneNumber" (ngModelChange)="onFieldChange()">
             </div>
 
           </form>
